--- a/Data Processing and Exploratory analyses.Rmd
+++ b/Data Processing and Exploratory analyses.Rmd
@@ -55,23 +55,102 @@ HIV_service=
 **Shows the number of HIV/AIDS diagnoses by race, sex, and age group.**
 ```{r}
 #work
+#work
+colnames(nyc_HIV1)
+colnames(nyc_HIV2)
+head(nyc_HIV1)
+library(ggplot2)
+All <- nyc_HIV1 %>% 
+  filter(sex == "All" & race == "All" & borough == "All")
+
+Female <- nyc_HIV1 %>% 
+  filter(sex == "Female" & borough == "All" & race !="All")
+
+Male <- nyc_HIV1 %>% 
+  filter(sex == "Male"  & borough == "All" & race !="All")
+
+graph1 = bind_rows(Female, Male)
+
+nyc_HIV1$hiv_diagnoses_num <- as.integer(nyc_HIV1$hiv_diagnoses_num)
+nyc_HIV2$hiv_diagnoses_num <- as.integer(nyc_HIV2$hiv_diagnoses_num)
+
+ggplot(graph1, aes(x=race, y=hiv_diagnoses_num, fill=sex)) +
+  geom_bar(stat="identity", position=position_dodge()) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  labs(x = "Race", y = "Number of HIV/AIDS Diagnoses", fill = "Sex")
+
+# Graph Age 
+age_summary <- nyc_HIV2 %>%
+  filter(age != "All" & race == "All" & borough == "All") %>%
+  group_by(age) %>%
+  summarise(total_hiv_diagnoses = sum(hiv_diagnoses_num))
+
+ggplot(age_summary, aes(x = age, y = total_hiv_diagnoses)) +
+  geom_bar(stat = "identity", color = "yellow", width = 0.7) +
+  labs(title = "Total HIV Diagnoses by Age Group",
+       x = "Age Group",
+       y = "Total HIV Diagnoses") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 summary:
+
 **Show the map of NYC HIV service resources location.**
 ```{r}
-#work
+if (!require(leaflet)) install.packages('leaflet')
+library(leaflet)
+filtered_data = HIV_service[HIV_service$longitude != 0 & HIV_service$latitude != 0,]
+# Create the map
+m <- leaflet(filtered_data) %>%
+  addProviderTiles(providers$OpenStreetMap) %>%
+  addCircleMarkers(
+    ~longitude, ~latitude,
+    radius = 4,
+    popup = ~paste("<strong>Facility Name:</strong>", facilityname,
+                   "<br><strong>Service Type:</strong>", service_type,
+                   "<br><strong>Address:</strong>", address,
+                   "<br><strong>Borough:</strong>", borough,
+                   "<br><strong>Zip:</strong>", zipcode)
+  )
+
+# Print the map
+print(m)
 ```
 summary:
 
 **Show the distribution of the HIV/AIDS diagnoses by neighborhood.** 
 ```{r}
 #work
+# I'll see if I can find the log&lat for the neighborhoods
+diagnoses <- nyc_HIV1 %>% 
+  select(borough, hiv_diagnoses_num)
+
+# Plot bar chart
+ggplot(diagnoses, aes(x = reorder(borough, hiv_diagnoses_num), y = hiv_diagnoses_num)) +
+  geom_col() +
+  labs(x = "Neighborhood",
+       y = "Number of HIV Diagnoses",
+       title = "HIV Diagnoses by Neighborhood") +
+  coord_flip()
 ```
 summary:
 
 **Trend analysis:analyze the trend of the number of HIV/AIDS diagnoses over time.**
 ```{r}
 #work
+#work
+All <- nyc_HIV1 %>% 
+  filter(sex == "All" & race == "All" & borough == "All")
+
+# Plot diagnoses over time
+ggplot(All, aes(x = year, y = hiv_diagnoses_num)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) + 
+  labs(
+    title = "HIV Diagnoses Trend (All Sex)",
+    x = "Year",
+    y = "Number of Diagnoses"
+  )
 ```
 summary:
 
