--- a/Data Processing and Exploratory analyses.Rmd
+++ b/Data Processing and Exploratory analyses.Rmd
@@ -266,3 +266,5 @@ abline(h = 0, col = "red")
 ```
 
 **summary:Here is a test of the effectiveness of the regression model constructed above. Use plot(model) to draw residual plots, scatter plots and other diagnostic plots. Residual plots are used to check for linear properties, heteroskedasticity, outliers, etc. Scatter plots can be used to check for correlation between independent variables, and QQ plots are used to check whether the residuals conform to the assumption of normal distribution. Here, we can see that the residuals do not conform well to normality and randomness. Analyzing the reason, it may be due to the existence of individual outliers, which affects the distribution of the data and the distribution of the residuals, making them not conform to normality and randomness.**
+
+**if github md knit fail,change to the html output“**
